--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,36 @@
-# Application Name
-spring.application.name=TransactionCsvFile
 
-# DataSource Configuration
+# Application Configuration
+spring.application.name=TransactionCsvFile
+server.port=8080
+# Primary (Oracle) Database Configuration
+
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=${DB_URL}
+spring.datasource.jdbc-url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-# JPA & Hibernate Configuration
+# Primary DB JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-server.port=8080
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
+
+# Log database config (PostgreSQL)
+spring.logdb.datasource.jdbc-url=${Log_DB_URL}
+spring.logdb.datasource.username=${Log_DB_USERNAME}
+spring.logdb.datasource.password=${Log_DB_PASSWORD}
+spring.logdb.datasource.driver-class-name=org.postgresql.Driver
+spring.logdb.datasource.hikari.pool-name=log-pool
+
+
+spring.logdb.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.logdb.datasource.jpa.hibernate.ddl-auto=none
+spring.logdb.datasource.jpa.show-sql=true
+spring.logdb.datasource.jpa.properties.hibernate.format_sql=true
+
 
