add webservice using Scheduler and soperequest for webservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,5 @@ spring.logdb.datasource.jpa.hibernate.ddl-auto=none
 spring.logdb.datasource.jpa.show-sql=true
 spring.logdb.datasource.jpa.properties.hibernate.format_sql=true
 
-
+wegaServiceUrl=http://10.57.40.173:7008/FCUBSRTService/FCUBSRTService?WSDL
+userId=EBIRRPT 
