Refactored API structure: Moved processAndMergeCsv invocation to controller, commented out scheduler,Refactored response handling of csv upload and process, and added Swagger configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,4 @@ spring.logdb.datasource.jpa.show-sql=true
 spring.logdb.datasource.jpa.properties.hibernate.format_sql=true
 
 wegaServiceUrl=http://10.57.40.173:7008/FCUBSRTService/FCUBSRTService?WSDL
-userId=EBIRRPT 
+userId=MBUSER
